results.txt
test_p1 (__main__.Test.test_p1) ... ok
test_p2 (__main__.Test.test_p2) ... ok
test_p3 (__main__.Test.test_p3) ... ERROR
test_p4 (__main__.Test.test_p4) ... ok
test_p5 (__main__.Test.test_p5) ... FAIL
test_p6 (__main__.Test.test_p6) ... ERROR

======================================================================
ERROR: test_p3 (__main__.Test.test_p3)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\.vscode\pp1-1\05-Test1\mock\checkingrealtest\check.py", line 23, in test_p3
    self.assertEqual(p3.f(88077066),42)
                     ^^^^
AttributeError: module 'p3' has no attribute 'f'

======================================================================
ERROR: test_p6 (__main__.Test.test_p6)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\.vscode\pp1-1\05-Test1\mock\checkingrealtest\check.py", line 34, in test_p6
    import p6
  File "c:\Users\Julie\.vscode\pp1-1\05-Test1\mock\checkingrealtest\p6.py", line 4
    if digit in n1 == digit
                           ^
SyntaxError: expected ':'

======================================================================
FAIL: test_p5 (__main__.Test.test_p5)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\.vscode\pp1-1\05-Test1\mock\checkingrealtest\check.py", line 31, in test_p5
    self.assertEqual(p5.f(20,15),"20,19,18,17,16,15")
AssertionError: '' != '20,19,18,17,16,15'
+ 20,19,18,17,16,15


----------------------------------------------------------------------
Ran 6 tests in 0.010s

FAILED (failures=1, errors=2)
